--- a/games-src/Players/NewPlayer/pom.xml
+++ b/games-src/Players/NewPlayer/pom.xml
@@ -8,9 +8,9 @@
         <version>2.0-SNAPSHOT</version>
     </parent>
     <groupId>put.ai.games</groupId>
-    <artifactId>NaivePlayer</artifactId>
+    <artifactId>NewPlayer</artifactId>
     <version>2.0-SNAPSHOT</version>
-    <name>NaivePlayer</name>
+    <name>NewPlayer</name>
     <url>http://maven.apache.org</url>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -33,7 +33,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>put.ai.games.naiveplayer.NaivePlayer</mainClass>
+                            <mainClass>put.ai.games.newplayer.NewPlayer</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
